@@ -2,6 +2,7 @@
 
     * Made template reference parsing greedier - parse everything
     up to the next whitespace, newline, '[', ']', '$' or '#'
+    * Printing of warnings to stderr can be disabled
 
 2013-02-20  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
